# CUDA_Learning

./: README.md  test  test.cu
data_transfer/: data_transfer  data_transfer.cu
hello_world/: hello.cu  hello_world
sharedMem_optimize/: report.ncu-rep  sharedMem_optimize  sharedMem_optimize.cu
softmax/: CMakeLists.txt  softmax  softmax.cu  softmaxV2  test_data_gen.py
softmax/include/: execute_softmax_test.hpp  launch_softmax_gpu_executor.cuh  scoped_timer_cpu.hpp  scoped_timer_gpu.cuh  softmax_cpu.hpp  softmax_gpu.cuh  test.hpp
softmax/src/: main.cu  test.cpp
softmax/src/kernals/: softmax_cpu.cpp  softmax_v1.cu
softmax/src/kernels/: softmax_cpu_v1.cpp  softmax_gpu_v1.cu  softmax_gpu_v2.cu  softmax_gpu_v3.cu  softmax_gpu_v4.cu
softmax/src/util/: launch_softmax_cpu.cpp  launch_softmax_gpu.cu
softmax/test_data/: test_data_gen.py
vec_add/: vec_add  vec_add.cu
